src/test/ui/moves/moves-based-on-type-cyclic-types-issue-4821.nll.stderr
error[E0382]: use of moved value: `node`
  --> $DIR/moves-based-on-type-cyclic-types-issue-4821.rs:13:13
   |
LL |         Some(right) => consume(right),
   |              ----- value moved here
...
LL |     consume(node) + r
   |             ^^^^ value used here after partial move
   |
   = note: move occurs because value has type `std::boxed::Box<List>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
